[package]
name = "d02"
version = "0.1.0"
authors = ["Denis Cornehl <denis.cornehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
recap = "0.1.1"
regex = "1.4.2"
serde = "1.0.117"
simple-error = "0.2.2"
