[package]
name = "d10"
version = "0.1.0"
authors = ["Denis Cornehl <denis.cornehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
permutator = "0.4.0"
simple-error = "0.2.2"
