[package]
name = "d12"
version = "0.1.0"
authors = ["Denis Cornehl <denis.cornehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
simple-error = "0.2.2"

[dev-dependencies]
lazy_static = "1.4.0"
test-case = "1.0.0"
