[package]
name = "d18"
version = "0.1.0"
authors = ["Denis Cornehl <denis.cornehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pom = "3.2.0"
simple-error = "0.2.2"

[dev-dependencies]
test-case = "1.0.0"
